--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -63,6 +63,66 @@
                     "${workspaceFolder}/docker-compose.yml"
                 ]
             }
+        },
+        {
+            "type": "docker-build",
+            "label": "docker-build: debug",
+            "dependsOn": [
+                "build"
+            ],
+            "dockerBuild": {
+                "tag": "adventureworks:dev",
+                "target": "base",
+                "dockerfile": "${workspaceFolder}/src/AdventureWorks.WebApi/Dockerfile",
+                "context": "${workspaceFolder}",
+                "pull": true
+            },
+            "netCore": {
+                "appProject": "${workspaceFolder}/src/AdventureWorks.WebApi/AdventureWorks.WebApi.csproj"
+            }
+        },
+        {
+            "type": "docker-build",
+            "label": "docker-build: release",
+            "dependsOn": [
+                "build"
+            ],
+            "dockerBuild": {
+                "tag": "adventureworks:latest",
+                "dockerfile": "${workspaceFolder}/src/AdventureWorks.WebApi/Dockerfile",
+                "context": "${workspaceFolder}",
+                "platform": {
+                    "os": "linux",
+                    "architecture": "amd64"
+                },
+                "pull": true
+            },
+            "netCore": {
+                "appProject": "${workspaceFolder}/src/AdventureWorks.WebApi/AdventureWorks.WebApi.csproj"
+            }
+        },
+        {
+            "type": "docker-run",
+            "label": "docker-run: debug",
+            "dependsOn": [
+                "docker-build: debug"
+            ],
+            "dockerRun": {},
+            "netCore": {
+                "appProject": "${workspaceFolder}/src/AdventureWorks.WebApi/AdventureWorks.WebApi.csproj",
+                "enableDebugging": true
+            }
+        },
+        {
+            "type": "docker-run",
+            "label": "docker-run: release",
+            "dependsOn": [
+                "docker-build: release"
+            ],
+            "dockerRun": {},
+            "netCore": {
+                "appProject": "${workspaceFolder}/src/AdventureWorks.WebApi/AdventureWorks.WebApi.csproj"
+            }
         }
     ]
 }
