--- a/src/AdventureWorks.WebApi/appsettings.json
+++ b/src/AdventureWorks.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AdventureWorks": "Server=CIQLAP139\\SQL2022_INSTANCE;Database=AdventureWorks2022;User Id=sa;Password=cloudiq@123;TrustServerCertificate=True;"
+    "AdventureWorks": "Server=192.168.0.103,1433;Database=AdventureWorks2022;User Id=sa;Password=cloudiq@123;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
