--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      container_name: adventureworks-webapi
     ports:
       - "5000:80"
       - "5001:443"
@@ -25,6 +26,7 @@ services:
 
   redis:
     image: redis:alpine
+    container_name: adventureworks-redis
     ports:
       - "6379:6379"
     command: redis-server --save 60 1 --loglevel warning
@@ -33,6 +35,7 @@ services:
 
   seq:
     image: datalust/seq:latest
+    container_name: adventureworks-seq
     ports:
       - "5341:80"
       - "5342:5341"
