--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3.9'
 services:
   webapi:
     image: adventureworks-webapi
+    container_name: adventureworks-webapi-dev
     build:
       context: .
-      dockerfile: Dockerfile
-      container_name: adventureworks-webapi
+      dockerfile: src/AdventureWorks.WebApi/Dockerfile.debug
     ports:
       - "5000:80"
       - "5001:443"
