--- a/src/AdventureWorks.WebApi/appsettings.Development.json
+++ b/src/AdventureWorks.WebApi/appsettings.Development.json
@@ -2,6 +2,28 @@
   "ConnectionStrings": {
     "AdventureWorks": "Server=192.168.0.100,1433;Database=AdventureWorks2022;User Id=sa;Password=cloudiq@123;TrustServerCertificate=True;"
   },
+  "Serilog": {
+    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.Seq"],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://seq:80"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext", "WithThreadId"]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
