Fixed config changes

--- a/src/AdventureWorks.WebApi/appsettings.json
+++ b/src/AdventureWorks.WebApi/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "AdventureWorks": "Server=192.168.0.103,1433;Database=AdventureWorks2022;User Id=sa;Password=cloudiq@123;TrustServerCertificate=True;"
   },
+  "JwtSettings": {
+    "SecretKey": "your-256-bit-secret-key-here-make-it-very-long-and-secure-at-least-32-characters",
+    "Issuer": "AdventureWorks.WebApi",
+    "Audience": "AdventureWorks.Client",
+    "ExpirationMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
